# anda

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  MCP_INTEGRATION.md  Makefile  README.md  README_CN.md  README_JA.md
.github/workflows/: sync-alpine.yml
agents/anda_assistant/: Cargo.toml
agents/anda_assistant/examples/: hello_assistant.rs
agents/anda_assistant/src/: agent.rs
agents/anda_bot/: Cargo.toml  README.md
agents/anda_bot/src/: main.rs
agents/anda_nexus/: Cargo.toml
agents/anda_nexus/src/: nexus.rs
anda_cli/: Cargo.toml  README.md
anda_cli/src/: main.rs
anda_cli/tests/: cli_binary.rs
anda_core/: Cargo.toml  README.md
anda_core/src/: agent.rs  context.rs  http.rs  json.rs  lib.rs  model.rs  tool.rs
anda_core/src/model/: completion.rs  resource.rs
anda_engine/: Cargo.toml  README.md
anda_engine/src/: context.rs  engine.rs  extension.rs  hook.rs  lib.rs  management.rs  memory.rs  model.rs  store.rs  subagent.rs
anda_engine/src/context/: agent.rs  base.rs  cache.rs  engine.rs  subagent.rs  tool.rs  web3.rs
anda_engine/src/extension/: extractor.rs  fetch.rs  fs.rs  google.rs  mcp.rs  note.rs  shell.rs  skill.rs  todo.rs
anda_engine/src/extension/fs/: edit.rs  glob.rs  read.rs  search.rs  write.rs
anda_engine/src/extension/shell/: native.rs  sandbox.rs
anda_engine/src/extension/skill/: types.rs
anda_engine/src/model/: anthropic.rs  deepseek.rs  doubao.rs  gemini.rs  kimi.rs  mimo.rs  openai.rs  test_support.rs  xai.rs
anda_engine/src/model/anthropic/: types.rs
anda_engine/src/model/gemini/: types.rs
anda_engine/src/model/openai/: types.rs
anda_engine/src/subagent/: agent.rs  args.rs  conversation.rs  manager.rs  session.rs  tests.rs
anda_engine_server/: Cargo.toml  README.md
anda_engine_server/src/: handler.rs  lib.rs  middleware.rs  types.rs
anda_engine_server/tests/: server.rs
anda_web3_client/: Cargo.toml  README.md
anda_web3_client/src/: client.rs  crypto.rs  lib.rs  tee.rs
anda_web3_client/tests/: client_features.rs
docs/: architecture.md  architecture_cn.md
examples/icp_ledger_agent/: Cargo.toml  README.md
examples/icp_ledger_agent/src/: main.rs
tools/anda_bnb/: Cargo.toml  README.md
tools/anda_bnb/examples/: balance_test.rs  transfer_test.rs
tools/anda_bnb/src/signer/: anda_signer.rs
tools/anda_icp/: Cargo.toml  README.md
