[workspace]
resolver = "2"
members = [
  "anda_cli",
  "anda_core",
  "anda_engine",
  "anda_engine_server",
  "anda_web3_client",
]

[workspace.package]
# Each member crate is versioned independently and sets its own `version`, so no shared
# `version` default is declared here to avoid a stale value that matches no published crate.
description = "Anda is an AI agent framework built with Rust, powered by ICP and TEEs."
repository = "https://github.com/ldclabs/anda"
homepage = "https://github.com/ldclabs/anda"
keywords = ["ai-agent", "icp", "tee"]
categories = [
  "accessibility",
  "web-programming",
  "development-tools",
  "text-processing",
]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
axum = { version = "0.8", features = [
  "http1",
  "http2",
  "json",
  # "macros",
  "matched-path",
  "tokio",
  "query",
], default-features = true }
async-trait = "0.1"
anda_db = { version = "0.10", features = ["full"] }
anda_db_tfs = { version = "0.10", features = ["full"] }
anda_cognitive_nexus = "0.10"
anda_db_schema = "0.10"
anda_kip = "0.10"
arc-swap = "1.9"
bytes = "1"
base64 = "0.22"
candid = "0.10"
cbor2 = "1"
chrono = "0.4"
encoding_rs = "0.8"
futures = "0.3"
futures-util = "0.3"
http = "1.3"
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_bytes = "0.11"
ic_cose_types = "0.10"
ic_cose = "0.10"
ic-oss-types = "1.3"
ic-agent = "0.48"
ic-ed25519 = "0.6"
ic-secp256k1 = "0.3"
ic_auth_types = "0.10"
ic_auth_verifier = "0.10"
ic_tee_cdk = "0.7"
ic_tee_agent = "0.7"
ic_tee_gateway_sdk = "0.7"
infer2 = "0.21"
anda_cloud_cdk = "0.5"
object_store = { version = "0.14" }
parking_lot = "0.12"
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
structured-logger = "1"
rand = "0.10"
reqwest = { version = "0.13", features = [
  "rustls",
  "json",
  "gzip",
  "stream",
  "http2",
  # "hickory-dns",
], default-features = true }
rmcp = { version = "2.2", default-features = false, features = [
  "client",
  "reqwest",
  "auth",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
] }
thiserror = "2"
moka = { version = "0.12", features = ["future"] }
log = { version = "0.4", features = ["kv_serde"] }
dotenv = "0.15"
schemars = { version = "1.0" }
clap = { version = "4.5", features = ["derive", "env"] }
idna = "1.0" # https://github.com/ldclabs/anda/security/dependabot/1
windows-sys = "0.52"
hex = "0.4"
tower-http = { version = "0.6", features = ["compression-gzip"] }
glob = "0.3"
serde-saphyr = "0.0"
unicode-segmentation = "1"
libc = "0.2"
zeroize = "1"

[patch.crates-io]

[workspace.metadata.cargo-shear]
ignored = ["idna", "serde_bytes"]

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'
