[package]
name = "anda_engine"
description = "Agents engine for Anda -- an AI agent framework built with Rust, powered by ICP and TEEs."
repository = "https://github.com/ldclabs/anda/tree/main/anda_engine"
publish = true
version = "0.14.4"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../anda_core", version = "0.14" }
anda_cloud_cdk = { workspace = true }
anda_cognitive_nexus = { workspace = true }
anda_kip = { workspace = true }
async-trait = { workspace = true }
anda_db_schema = { workspace = true }
anda_db = { workspace = true }
anda_db_tfs = { workspace = true }
arc-swap = { workspace = true }
candid = { workspace = true }
bytes = { workspace = true }
cbor2 = { workspace = true }
chrono = { workspace = true }
encoding_rs = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
mime = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
http = { workspace = true }
object_store = { workspace = true }
ic_auth_types = { workspace = true, features = ["xid"] }
ic_auth_verifier = { workspace = true, features = ["envelope"] }
ic_cose_types = { workspace = true }
infer2 = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
structured-logger = { workspace = true }
schemars = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
moka = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
serde-saphyr = { workspace = true }
glob = { workspace = true }
rmcp = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
axum = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Globalization"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
